--- a/TestClient/DignusLog.config
+++ b/TestClient/DignusLog.config
@@ -1,37 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<targets>
-		<target key ="consoleConfig" type ="console" format="${datetime} | ${level} | ${message} | ${callerFileName} : ${callerLineNumber}">
-          <option type="color" key="Debug" value="DarkGray"/>
-          <option type="color" key="Info" value="Green"/>
-          <option type="color" key="Error" value="DarkRed"/> 
-          <option type="color" key="Fatal" value="DarkRed"/>
-        </target>
-        <target key="fileConfig" type ="file" format="${datetime}, ${message}">
-          <option type ="fileName" value="./logs/LogFile.txt"/>
-          <option type ="archiveFileName" value ="./archive/log.{#}.txt"/>
-          <option type ="archiveRolling" value ="Day"/>
-          <option type ="maxArchiveFiles" value ="7"/>
-          <option type ="autoFlush" value ="true"/>
-          <option type ="keepConnectionOpen" value="true"/>
-        </target>
-		<target key="databaseConfig" type="database">
-			<database dbConnection ="test"
+  <targets>
+    <target key ="consoleConfig" type ="console" format="${datetime} | ${level} | ${message} - ${callerFileName} : ${callerLineNumber}">
+      <option type="color" key="Debug" value="White"/>
+      <option type="color" key="Info" value="Green"/>
+      <option type="color" key="Error" value="Red"/>
+      <option type="color" key="Fatal" value="Red"/>
+    </target>
+    <target key="fileConfig" type ="file" format="${datetime} | ${level} | ${message} - ${callerFileName} : ${callerLineNumber}">
+      <option type ="fileName" value="./logs/LogFile.txt"/>
+      <option type ="archiveFileName" value ="./archive/log.{#}.txt"/>
+      <option type ="archiveRolling" value ="Day"/>
+      <option type ="maxArchiveFiles" value ="7"/>
+      <option type ="autoFlush" value ="true"/>
+      <option type ="keepConnectionOpen" value="true"/>
+    </target>
+    <target key="databaseConfig" type="database">
+      <database dbConnection ="test"
 					  dbProvider="MySql.Data.MySqlClient.MySqlConnection, MySql.Data"
 				      dbCommandText="insert into log (logged, level, message)
 										values (@logged, @level, @message);">
 
-				<option type="parameter" key="@level" value="${level}"></option>
-				<option type="parameter" key="@logged" value="${datetime}"></option>
-				<option type="parameter" key="@message" value="${message}"></option>
-				<option type="parameter" key="@callsite" value="${callerFileName} : ${callerLineNumber}"></option>
-			</database>
-			<option type ="keepConnectionOpen" value="true"/>
-		</target>
-	</targets>
-	<loggers>
-		<!--<logger key="consoleConfig" name ="" minLogLevel="Info"></logger>-->
-		<logger key ="fileConfig" name ="" minLogLevel="Debug"></logger>
-		<!--<logger key ="databaseConfig" name="" minLogLevel="Info"></logger>-->
-	</loggers>
+        <option type="parameter" key="@level" value="${level}"></option>
+        <option type="parameter" key="@logged" value="${datetime}"></option>
+        <option type="parameter" key="@message" value="${message}"></option>
+        <option type="parameter" key="@callsite" value="${callerFileName} : ${callerLineNumber}"></option>
+      </database>
+      <option type ="keepConnectionOpen" value="true"/>
+    </target>
+  </targets>
+  <loggers>
+    <logger key="consoleConfig" minLogLevel="Info"></logger>
+    <logger key ="fileConfig" minLogLevel="Info"></logger>
+    <!--<logger key ="databaseConfig" name="" minLogLevel="Info"></logger>-->
+  </loggers>
 </configuration>
