--- a/SuperSocket1.6/EchoServer/EchoServer.csproj
+++ b/SuperSocket1.6/EchoServer/EchoServer.csproj
@@ -9,6 +9,13 @@
 		<Compile Include="D:\Source\InzoiServer\Tests\SocketTest\Proto\Generated\*.cs" Link="Proto\Generated\%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Remove="Handler\DummyProtocolHandler.cs" />
+	  <Compile Remove="MainServer.cs" />
+	  <Compile Remove="Network\Packet.cs" />
+	  <Compile Remove="ReceiveFilter.cs" />
+	</ItemGroup>
+
 
 	<ItemGroup>
 	  <PackageReference Include="Google.Protobuf" Version="3.30.2" />
@@ -17,6 +24,12 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\SuperSocketLite\SuperSocketLite.csproj" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <Folder Include="Handler\" />
+	  <Folder Include="Network\" />
 	</ItemGroup>
 	
 </Project>
