--- a/TestClient/EchoClient.csproj
+++ b/TestClient/EchoClient.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="publish\**" />
+    <EmbeddedResource Remove="publish\**" />
+    <None Remove="publish\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Dignus">
       <HintPath>..\Dll\Dignus.dll</HintPath>
     </Reference>
