누겟으로 dll 관리

--- a/DignusSocketServer/DignusEchoServer.csproj
+++ b/DignusSocketServer/DignusEchoServer.csproj
@@ -9,15 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Dignus">
-      <HintPath>..\Dll\Dignus.dll</HintPath>
-    </Reference>
-    <Reference Include="Dignus.Log">
-      <HintPath>..\Dll\Dignus.Log.dll</HintPath>
-    </Reference>
-    <Reference Include="Dignus.Sockets">
-      <HintPath>..\Dll\Dignus.Sockets.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Dignus.Log" Version="1.0.3" />
+    <PackageReference Include="Dignus.Sockets" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
