--- a/TestClient/EchoClient.csproj
+++ b/TestClient/EchoClient.csproj
@@ -14,15 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Dignus">
-      <HintPath>..\Dll\Dignus.dll</HintPath>
-    </Reference>
-    <Reference Include="Dignus.Log">
-      <HintPath>..\Dll\Dignus.Log.dll</HintPath>
-    </Reference>
-    <Reference Include="Dignus.Sockets">
-      <HintPath>..\Dll\Dignus.Sockets.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Dignus.Log" Version="1.0.3" />
+    <PackageReference Include="Dignus.Sockets" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
