최신 라이브러리 성능 비교 갱신

--- a/DignusSocketServer/DignusEchoServer.csproj
+++ b/DignusSocketServer/DignusEchoServer.csproj
@@ -9,8 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dignus.Log" Version="1.0.4" />
-    <PackageReference Include="Dignus.Sockets" Version="1.0.7" />
+    <Reference Include="Dignus">
+      <HintPath>..\Dlls\Dignus.dll</HintPath>
+    </Reference>
+    <Reference Include="Dignus.Log">
+      <HintPath>..\Dlls\Dignus.Log.dll</HintPath>
+    </Reference>
+    <Reference Include="Dignus.Sockets">
+      <HintPath>..\Dlls\Dignus.Sockets.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
